Bug 1322678 - Don't overwrite the custom-set title of ImageDocument; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D11043